--- a/submissions/denislukianenko/html5-form/css/base.scss
+++ b/submissions/denislukianenko/html5-form/css/base.scss
@@ -1,6 +1,6 @@
 $focus-outline: 0 0 0 4px #76a6e188;
 
-@mixin visually-hidden {
+.visually-hidden {
   position: absolute;
   overflow: hidden;
   clip: rect(0 0 0 0);
