--- a/submissions/denislukianenko/html5-form/css/main.scss
+++ b/submissions/denislukianenko/html5-form/css/main.scss
@@ -12,6 +12,12 @@ form > .one-col-wrapper {
   background-color: white;
 }
 
+@media (max-width: 1130px) {
+  form {
+    padding-bottom: 0;
+  }
+}
+
 @import "css/main/summary-helpcenter";
 @import "css/main/choose-type";
 @import "css/main/upload-section";
