--- a/submissions/denislukianenko/html5-form/css/main/summary-helpcenter.scss
+++ b/submissions/denislukianenko/html5-form/css/main/summary-helpcenter.scss
@@ -30,6 +30,7 @@
 }
 
 .shifted-header {
+  margin: 0;
   margin-left: -30px;
   text-transform: uppercase;
   font-size: 14px;
@@ -56,12 +57,14 @@
   flex: 1 0 70px;
 }
 
-.info-item > b {
+.info-item > .info-item-bold {
+  margin: 0;
+  font-weight: bold;
   text-transform: uppercase;
   font-size: 12px;
   color: #6e759d;
 }
-.info-item > p {
+.info-item > .info-item-text {
   margin: 0;
   font-size: 12px;
   color: #a5abc5;
@@ -76,12 +79,13 @@
 
 .order-button {
   height: 53px;
-  min-width: 120px;
+  min-width: 100px;
   border-radius: 5px;
   border: 1px solid black;
   text-transform: uppercase;
   font-size: 13px;
   font-weight: 500;
+  transition: all 100ms ease-in-out;
 }
 .order-button:focus {
   box-shadow: $focus-outline;
@@ -91,6 +95,7 @@
   background-color: #5fcac6;
   border-color: #46a4a0;
   color: white;
+  box-shadow: 0 0 0 #50d6d2;
 }
 .print-button {
   background-color: #f7f7fa;
@@ -100,18 +105,23 @@
 
 .place-button:hover {
   background-color: #50d6d2;
+  transform: scale(1.01) translate(0, -3px);
+  box-shadow: 0 10px 10px -5px #50d6d2;
 }
 .print-button:hover {
   background-color: #f9f9ff;
+  transform: scale(1.01) translate(0, -3px);
+  box-shadow: 0 10px 10px -5px #d9e5f0;
 }
 
-.helpcenter > p {
+.helpcenter > .helpcenter-text {
   font-size: 12px;
   font-weight: 300;
   color: #a0a6b8;
   line-height: 1.4;
 }
-.helpcenter > b > a {
+.helpcenter > .helpcenter-bold > .helpcenter-link {
+  font-weight: bold;
   font-size: 12px;
   color: #6e768f;
   text-decoration: none;
@@ -119,7 +129,7 @@
   margin-right: 10px;
   display: inline-block;
 }
-.helpcenter > b > a:hover {
+.helpcenter > .helpcenter-bold > .helpcenter-link:hover {
   color: #4e70d4;
   box-shadow: 0 1px 0 #4e70d45d;
 }
@@ -144,5 +154,18 @@
   }
   .order-button {
     margin-right: 10px;
+  }
+}
+
+@media (max-width: 360px) {
+  .order-info {
+    height: unset;
+  }
+  .info-item {
+    margin-top: 10px;
+    flex: 1 0 30px;
+  }
+  .order-info-items {
+    flex-direction: column;
   }
 }
