fix after review2

--- a/submissions/babayK0/html5-form/styles/scss/layoutForm.scss
+++ b/submissions/babayK0/html5-form/styles/scss/layoutForm.scss
@@ -60,6 +60,7 @@
 
 .section_wrapper{
   display: flex;
+  justify-content: space-between;
   padding-bottom: 100px;
   @include mobileS{
     flex-direction: column;
@@ -70,10 +71,13 @@
 }
 
 .form__tone{
-  margin-right: 60px;
   @include mobileS{
     margin:0;
   }
+}
+
+.form__range{
+  padding-right: 70px;
 }
 
 .form__tone_radio-wrapper{
@@ -86,9 +90,10 @@
   }
 }
 
+
 .form__range-wrapper{
   margin-left:70px;
-  width: 100%;
+  width: 90%;
   @include mobileS{
     margin-left: 5px;
   }
