A bunch of fixes

--- a/submissions/CrazyPike/formss/_section-languages.scss
+++ b/submissions/CrazyPike/formss/_section-languages.scss
@@ -20,6 +20,10 @@
   align-items: center;
 }
 
+.section-languages__empty-cell{
+
+}
+
 .section-languages__content span{
   display: flex;
   align-items: center;
