--- a/submissions/CrazyPike/formss/_section-tone-urgent.scss
+++ b/submissions/CrazyPike/formss/_section-tone-urgent.scss
@@ -35,7 +35,7 @@
 }
 
 
-.section-tone__buttons > div{
+.section-tone__buttons > span{
   display: flex;
   width: 200px;
   justify-content: center;
