--- a/submissions/CrazyPike/formss/_section-payment.scss
+++ b/submissions/CrazyPike/formss/_section-payment.scss
@@ -17,7 +17,7 @@
   flex-direction: column;
   align-items: left;
   margin-right:30px;
-  & span {
+  & label    {
     text-transform: uppercase;
   }
 }
@@ -104,7 +104,7 @@
   display: flex;
   flex-direction: column;
   align-items: left;
-  & span{
+  & label{
     text-transform: uppercase;
   }
 }
