--- a/submissions/CrazyPike/formss/index.pug
+++ b/submissions/CrazyPike/formss/index.pug
@@ -55,7 +55,7 @@ html(lang="ru")
                     hr.section-translate__horizontal-line
                 div.section-translate__options
                     input.section-translate__input__hidden(type='radio', name='type-for-translate',id='option-web',
-                    value='web' required="required" checked='checked')
+                    value='web' required checked)
                     label.section-translate__buttons(for="option-web")
                         img(src='img/icon_website.png', alt='Website icon')
                         span Web
@@ -110,17 +110,17 @@ html(lang="ru")
                 div.section-languages__content-container
                     div.section-languages__content
                         label.page__uppercase from
-                        select.section-languages__select(required='required')
+                        select.section-languages__select(required)
                             option Arabic
                             option Slavic
                         div.section-languages__empty-cell
                         div.section-languages__empty-cell
                         label.page__uppercase to
-                        select.section-languages__select(required='required')
+                        select.section-languages__select(required)
                             option English
                             option Polish
                         span
-                            select.section-languages__select(required='required')
+                            select.section-languages__select(required)
                                 option Ukrainian
                                 option Polish
                             button.form__delete-button(type='button')
@@ -132,7 +132,7 @@ html(lang="ru")
                     h2.section__header Select your desired tone
                     div.section-tone__container
                         input.section-tone__buttons__hidden(type='radio', name='tone',
-                        id='option-friendly',value='friendly', required="required", checked='checked')
+                        id='option-friendly',value='friendly', required, checked)
                         label.section-tone__buttons(for="option-friendly", tabindex="0")
                             span
                                 img(src='img/icon_friendly.png', alt='Friendly icon')
@@ -155,7 +155,7 @@ html(lang="ru")
                         div.section-urgent__range-end
                             div.input-range-end
                             div.input-range-end
-                        input(type="range", min="0", max="2", value="1", id="form__range", required="required")
+                        input(type="range", min="0", max="2", value="1", id="form__range", required)
                         div.section-urgent__range-label
                             span i got time
                             span average
@@ -175,20 +175,20 @@ html(lang="ru")
                     div.form-payment__input
                         label(for='person_name') full name
                         input(type='text', placeholder='Full name', pattern='[0-9A-Za-z. -]+', id = 'person_name',
-                        title='Enter the name', required="required")
+                        title='Enter the name', required)
                 div.form-payment__input-email-pass
                     div.form-payment__input
                         label(for='person_email') email address
                         input(type='email', placeholder='Email',
                         pattern='[0-9A-Za-z.-]+[@][0-9A-Za-z.-]+[.][0-9A-Za-z.-]+', id='person_email',
-                        title='Email address', required="required")
+                        title='Email address', required)
                     div.form-payment__input
                         label(for='person_pass') password
                         input(type='password', minlength='6', placeholder='Enter password..', id = 'person_pass',
-                        title='Enter password', required="required")
+                        title='Enter password', required)
                 div.form-payment__option-container
                     input.section-payment__input__hidden(type='radio', name='payment',id='option-card',value='card',
-                    required="required",checked='checked')
+                    required,checked)
                     label.form-payment__option(for="option-card", tabindex="0")
                         img(src='img/icon_cards.png', alt='cards icon')
                     input.section-payment__input__hidden(type='radio', name='payment',id='option-paypal',value='paypal')
@@ -201,15 +201,15 @@ html(lang="ru")
                     div.form-payment__card-input
                         label(for='card_num') card number
                         input.form-payment__card-number(type='text', id = 'card_num', pattern='[0-9]{16}', placeholder='Card number..',
-                        minlength=16, maxlength=16,title='Card number must be 16-digit')
+                        minlength=16, maxlength=16,title='Card number must be 16-digit',required)
                     div.form-payment__card-input
                         label(for='card_exp') card expire
                         input.form-payment__card-expire(type='text', id = 'card_exp' placeholder='MM/YY', pattern='[0-9]{2}/[0-9]{2}',
-                        title='Format MM/YY')
+                        title='Format MM/YY',required)
                     div.form-payment__card-input
                         label(for='card_cvv') card cvv
                         input.form-payment__card-cvv(type='password', id = 'card_cvv', pattern='[0-9]{3}',placeholder='CVV', minlength=3,
-                        maxlength=3,title='CVV mush have 3 digits')
+                        maxlength=3,title='CVV mush have 3 digits',required)
             section.form-submit
                 div
                     input(type='checkbox',id='TC-label')
@@ -251,4 +251,5 @@ html(lang="ru")
                                 span Linkedin
                 a.page__links(href='#')
                     img(src='img/logo_grey.png', alt='Company logo')
+
 
